[package]
name = "tiffin"
description = "A minimal container runtime for Linux for setting up chroot-like environments"
version = "0.3.0"
edition = "2021"
keywords = ["container", "runtime", "chroot", "linux", "nix"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
nix = { version = "0.27.1", features = [
    "fs",
    "env",
    "dir",
    "user",
    "mount",
    "sched",
] }
sys-mount = "3"
tracing = "0.1.37"

[features]
root = []
